Fixes background color on scroll.
The gray background color was not scrolling past the initial viewport. This was because `<body>` was limited to `100vh` and constraining the layout component whose content was overflowing. Setting `overflow-y: auto;` keeps the constraint that the `<body>` is limited to the viewport while scrolling content correctly.

--- a/docs/components/layout/layout.css
+++ b/docs/components/layout/layout.css
@@ -11,6 +11,7 @@
 
     height: 100%;
     background-color: var(--light-gray);
+    overflow-y: auto;
 }
 
 :host(.nav-collapsed) {
